2007-01-15        svu

	* sql/actions/SchemaAction.java: putting some sensible info into the
	buffer when Column pseudo-file is open.

2007-01-10        svu

	* sql/SqlTextPublisher.java: Aggregating update counter.

2006-12-14        svu

	* sql/TableObjectType.java, sql/SqlSubVFS.java: The "Schema" object
	action actually works now, for tables (only column names, nothing
	more).
	* sql/actions/DataAction.java, sql/actions/SchemaAction.java,
	sql/TableObjectType.java, sql/SqlSubVFS.java: separating Data/Schema
	actions into top-level classes
	* sql/CodeObjectType.java, sql/actions/SourceCodeAction.java:
	separating SourceCode action
	* sql/ViewObjectType.java, sql/CodeObjectType.java,
	sql/serverTypes/SybaseVFS.java, sql/serverTypes/OracleVFS.java:
	ViewObjectType is separated, added Data and Columns actions
	* sql/serverTypes/SybaseVFS.java, sql/serverTypes/ProgressVFS.java,
	sql/serverTypes/OracleVFS.java, sql/serverTypes/PostgresVFS.java,
	sql/serverTypes/ComplexVFS.java: getting rid of obsolete ComplexVFS

2006-12-12        svu

	* sql/TableObjectType.java, sql/SqlSubVFS.java: added ability to have
	complex object action hierarchies. Started implementing "Schema"
	object action, for tables (to be extended for views)

2006-12-02        svu

	* sql/SqlServerChanged.java, sql/ResultSetWindowPopup.java,
	sql/SqlServerDialog.java, sql/serverTypes/ProgressVFS.java,
	sql/serverTypes/PostgresVFS.java,
	sql/serverTypes/postgres/StoredProcedureObjectType.java,
	sql/serverTypes/ComplexVFS.java, sql/options/JdbcOptionPane.java,
	sql/options/ServersOptionPane.java, sql/options/GeneralOptionPane.jav
	, sql/SqlUtils.java, sql/SqlServerRecord.java, sql/Preprocessor.java,
	sql/SqlSubVFS.java, sql/SqlServerListChanged.java,
	sql/SqlOptionPane.java: getting rid of @created javadoc crap (most of
	it was in Russian in various encodings)
	* sql/serverTypes/oracle.xml,
	sql/serverTypes/oracle/OracleTableObjectType.java: implementing
	"Extract to DDL"

2006-12-01        svu
