@@ -21,7 +21,7 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
-package sql;
+package sql.options;
 
 import java.awt.*;
 import java.awt.event.*;
